<!-- Eng Lang -->
<resources>

    <string name="app_name">Krono</string>
    <!-- Quick Settings Tile -->
    <string name="quick_tile_title">Krono Activity</string>

    <!-- Main Menu Items -->
    <string name="MenuItem0">Activities</string>
    <string name="MenuItem1">Plans</string>
    <string name="MenuItem2">Calendar</string>
    <string name="MenuItem3">Friends</string>
    <string name="MenuItem4">Profile</string>
    <string name="MenuItem5">Settings</string>
    <string name="profile_save">Save</string>
    <string name="profile_back">Back</string>
    <string name="profile_firstname">First Name</string>
    <string name="profile_lastname">Last Name</string>
    <string name="menu_activities_new">New Activity</string>
    <string name="newactivity">New Activity</string>
    <string name="newactivity_title">Title</string>
    <string name="newactivity_description">Description</string>
    <string name="newactivity_duration">Duration</string>
    <string name="newactivity_public">Public</string>
    <string name="newactivity_cancel">Cancel</string>
    <string name="newactivity_save">Save</string>
    <!-- Main Menu 0 Activity List Items -->
    <string name="MainMenu0_ActivityListNameString">Title</string>
    <string name="MainMenu0_ActivityListDescString">Description</string>
    <string name="MainMenu0_ActivityListTimestampString">Timestamp</string>
    <!-- Main Menu 1 Plan List Items -->
    <string name="MainMenu1_PlanListTitleString">Title</string>
    <string name="MainMenu1_PlanListDescString">Description</string>

    <!-- 2. Cloud Firestore Collection Names --><!-- 2. Cloud Firestore Collection Names -->
    <!-- 2. Cloud Firestore Collection Names --><!-- 2. Cloud Firestore Collection Names -->
    <!-- 2. Cloud Firestore Collection Names --><!-- 2. Cloud Firestore Collection Names -->
    <!-- 2. Cloud Firestore Collection Names --><!-- 2. Cloud Firestore Collection Names -->
    <!-- 2. Cloud Firestore Collection Names --><!-- 2. Cloud Firestore Collection Names -->
    <!-- 2. Cloud Firestore Collection Names --><!-- 2. Cloud Firestore Collection Names -->

    <!-- 2. Cloud Firestore Collection Names -->
    <string name="collection_users">Users</string>
    <string name="collection_plans">Plans</string>
    <string name="collection_friends">Friends</string>
    <string name="collection_activities">Activities</string>

    <!-- 3. Authentication -->
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

    <!-- 4. User Interface -->
    <string name="ui_title">Title</string>
    <string name="ui_description">Description</string>
    <!-- Intent extras -->
    <string name="intent_plans">intent_plans</string>
    <string name="intent_userList">intent_userlist</string>
    <!-- Toolbar -->
    <string name="toolbar_searchButtonText">Search</string>
    <string name="toolbar_shareText">Share</string>
    <string name="toolbar_menuText">Menu</string>
    <string name="toolbar_renamePlanText">Rename plan</string>
    <string name="toolbar_sortByText">Sort by</string>
    <string name="toolbar_deletePlanText">Delete Plan</string>

    <!-- 5. Nav Drawer -->
    <string name="navigation_allActivities">All Activities</string>
    <string name="navigation_plans">Plans</string>
    <string name="navigation_friends">Friends</string>
    <string name="navigation_openText">Navigation Open</string>
    <string name="navigation_closeText">Navigation Close</string>
    <string name="navigation_profileText">Profile</string>
    <string name="navigation_displayNameText">Display Name</string>
    <string name="navigation_emailFieldText">email@field.com</string>
    <string name="navigation_allActivitiesText">All Activities</string>
    <string name="navigation_friendsText">Friends</string>
    <string name="navigation_managePlansText">Manage Plans</string>

</resources>
